--- a/react_project/untitled/public/styles.css
+++ b/react_project/untitled/public/styles.css
@@ -12,23 +12,14 @@ html
 
 body
 {
-	background       : #eee url("https://www.transparenttextures.com/patterns/cubes.png");
-	padding          : 0 16px;
+	background       : #eee;
+	background-image : url("https://www.transparenttextures.com/patterns/cubes.png");
+	padding          : 0 -16px;
 	}
 
-header
+#form
 {
-	background-color : #535bf2;
-	margin           : auto -16px;
-	padding          : 16px 32px;
-	box-shadow       : 0 0 10px 0 rgba(0, 0, 0, 0.3);
-	}
-
-header h1
-{
-	color       : #fff;
-	font-family : "McLaren", cursive;
-	font-weight : 200;
+	margin-top : 100px;
 	}
 
 footer
@@ -75,7 +66,7 @@ footer p
 	position     : relative;
 	float        : right;
 	margin-right : 10px;
-	color        : #646cff;
+	color        : darkslateblue;
 	border       : none;
 	width        : 36px;
 	height       : 36px;
@@ -111,7 +102,7 @@ form.create-note button
 	position      : absolute;
 	right         : 18px;
 	bottom        : -18px;
-	background    : pink;
+	background    : slateblue;
 	color         : #fff;
 	border        : none;
 	border-radius : 50%;
