--- a/react_project/untitled/public/styles.css
+++ b/react_project/untitled/public/styles.css
@@ -32,7 +32,7 @@ footer
 
 footer p
 {
-	color : #ccc;
+	color : deeppink;
 	}
 
 .note
@@ -114,5 +114,5 @@ form.create-note button
 
 .line
 {
-	border-top : 1px solid black;
+	border-top : 1px solid rgba(0, 0, 0, 0.3);
 	}
